--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: Platane/snk@v3
         with:
           # Replace with your github username
-          github_user_name: YOUR_USERNAME
+          github_user_name: TejasBal1607
           outputs: |
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
